# riesztree

./: .gitignore  BENCH_BASELINE.md  CLAUDE.md  README.md
.githooks/: pre-commit
examples/: additive_shift_quickstart.py  ate_quickstart.py  att_quickstart.py  local_shift_quickstart.py  tsm_quickstart.py
python/: pyproject.toml  setup.py
python/benchmarks/: README.md  bench_compare.py  bench_fit.py
python/riesztree/: __init__.py  backend.py  diagnostics.py  estimator.py  grow.py  predictor.py  pruning.py  splitter.py  tree.py
python/riesztree/fast/: __init__.py  _binner.py  _grow_c.pyx  _loss_kernels.pxd  _loss_kernels.pyx  _splitter.py  _splitter_c.pyx  _splitter_hist.pyx  _tree.py  _tree_c.pyx
python/tests/: conftest.py  test_categorical.py  test_consistency.py  test_cython_splitter_parity.py  test_decoupling.py  test_diagnostics.py  test_early_stopping.py  test_flat_tree.py  test_growth_policy.py  test_hist_pms_parity.py  test_hist_splitter.py  test_loss_aware.py  test_protocol.py  test_pruning.py  test_pruning_path.py  test_python_splitter_deprecation.py  test_random_splitter.py  test_self_parity.py  test_serialization.py  test_sklearn_hparam_parity.py  test_sklearn_integration.py  test_user_loss_registration.py
r/riesztree/: DESCRIPTION  NAMESPACE
r/riesztree/R/: riesztree.R
r/riesztree/tests/testthat/: test-parity.R
