[build-system]
requires = [
    "setuptools>=61",
    # Cython is needed at build time to compile the .pyx extensions.
    "cython>=3.0",
    # numpy headers are needed for cimport numpy in the extensions.
    "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[project]
name = "riesztree"
version = "0.0.1"
description = "Single-tree backend for Riesz regression. Sister package to forestriesz, rieszboost, krrr, riesznet."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "rieszreg>=0.0.1",
]

[project.optional-dependencies]
test = ["pytest>=7", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["riesztree*"]

# Cython extensions are configured imperatively in setup.py; pyproject's
# table-style ext-modules support is still tooling-dependent. The setup.py
# stub below calls setuptools.setup() with cythonize()-d Extension objects.
